@@ -6,10 +6,11 @@
 #include "polygon.h"
 
 void steroids_polygon_draw (Steroids_Polygon *p,
-			    int clipMode)
+			    int clipMode,
+			    GR_WINDOW_ID wid)
 {
     // Draw polygon:
-    GrPoly (steroids_globals.game_wid, steroids_globals.game_gc, p->nPoints, p->point);
+    GrPoly (wid, steroids_globals.game_gc, p->nPoints, p->point);
 }
 
 
